--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -8,5 +8,29 @@ pipeline {
         sh 'node --version'
       }
     }
+    stages {
+    stage('Dev') {
+      steps {
+        sh 'java -version'
+      }
+    }
+      stages {
+    stage('prod') {
+      steps {
+        sh 'jenkins --version'
+      }
+    }
+        stages {
+    stage('stage') {
+      steps {
+        sh 'docker --version'
+      }
+    }
+          stages {
+    stage('deploy') {
+      steps {
+        sh 'ps -ef | grep jenkins'
+      }
+    }
   }
 }
