--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
       }
       steps {
         sh 'mvn --version'
+        sh 'mvn clean'
       }
     }
     stage('Front-end') {
@@ -15,6 +16,7 @@ pipeline {
       }
       steps {
         sh 'node --version'
+        sh 'npm install'
       }
     }
   }
